Update 06 - 1776.webloc.md

--- a/IV. Team + Execution/04 - Ops - Office/01 - Content - Coworking Spaces/md/06 - 1776.webloc.md
+++ b/IV. Team + Execution/04 - Ops - Office/01 - Content - Coworking Spaces/md/06 - 1776.webloc.md
@@ -1,6 +1,5 @@
-Here's an example of a description that appears under a link.
 
-15 MIN READ || 1776 is a global network empowering innovators everywhere to shape the digital transformation of critical industries.
+1776 is a global network empowering innovators everywhere to shape the digital transformation of critical industries.
 
 Credit: [1776](https://www.1776.vc/)
 
